style: Minor tweaking

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -40,16 +40,14 @@
         border-color: #5a6268;
     }
 </style>
-{# --- END CUSTOM STYLES --- #}
-    <h1 class="mb-3">Check-ins Calendar</h1>
-    
+{# --- END CUSTOM STYLES --- #}   
     {# --- Main Row: Calendar and Side Panel Placeholder --- #}
     <div class="row mb-4">
         {# Calendar Area #}
         <div class="col-md-8">
             <div class="card">
                 <div class="card-header">
-                    <h2>Calendar View</h2>
+                    <h2>Check-ins Calendar View</h2>
                 </div>
                 <div class="card-body">
                     <div id='calendar'></div> 
@@ -149,7 +147,7 @@
         <div class="col-12"> {# Use full width for the combined card #}
             <div class="card mb-4">
                  <div class="card-header">
-                     <h2>Total Check-ins Breakdowns</h2> {# Combined Header #}
+                     <h2>Total Check-ins by Reason and Business Line</h2> {# Combined Header #}
                  </div>
                 <div class="card-body">
                     <div class="row"> {# Inner row for side-by-side layout #}
