style: Minor tweaking

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -88,7 +88,7 @@
     {# --- CARD 1: Monthly Accordion --- #}
     <div class="card mb-4">
         <div class="card-header">
-            <h3>Total Check-ins Monthly Breakdown</h3>
+            <h3 align="center">Total Check-ins Monthly Breakdown</h3>
         </div>
         <div class="card-body">
             <div class="accordion" id="monthlyAccordion">
