--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -147,7 +147,7 @@
         <div class="col-12"> {# Use full width for the combined card #}
             <div class="card mb-4">
                  <div class="card-header">
-                     <h3>Total Check-ins by Reason and Business Line</h3> {# Combined Header #}
+                     <h3 align="center">Total Check-ins by Reason and Business Line</h3> {# Combined Header #}
                  </div>
                 <div class="card-body">
                     <div class="row"> {# Inner row for side-by-side layout #}
@@ -245,7 +245,7 @@
     <div class="row">
         <div class="col-12">
             <div class="card">
-                <div class="card-header"><h3>All Records (Raw Data)</h3></div> {# Title is now white #}
+                <div class="card-header"><h3 align="center">All Records (Raw Data)</h3></div> {# Title is now white #}
                 <div class="card-body">
                     <div class="table-responsive">
                         <table class="table table-striped table-hover table-bordered">
