style: Minor tweaking

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -112,7 +112,7 @@
                                     {{ display_month }} - ({{ records_for_month | length }} Check-ins)
                                 </button>
                             </h3>
-                            <div id="{{ accordion_id }}" class="accordion-collapse collapse {% if loop.first %}show{% endif %}" 
+                            <div id="{{ accordion_id }}" class="accordion-collapse collapse" 
                                  aria-labelledby="{{ header_id }}" data-bs-parent="#monthlyAccordion">
                                 <div class="accordion-body">
                                     <ul class="list-group">
