style: Minor tweaking

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -3,6 +3,7 @@
 {% block title %}Admin Dashboard{% endblock %}
 
 {% block content %}
+<h1 class="mb-3">GREENVILLE CHECK-INS DASHBOARD</h1>
 <style>
     body {
         /* Apply a light gray background to the whole page content area */
@@ -47,7 +48,7 @@
         <div class="col-md-8">
             <div class="card">
                 <div class="card-header">
-                    <h3>Check-ins Calendar View</h3>
+                    <h3 align="center">Check-ins Calendar View</h3>
                 </div>
                 <div class="card-body">
                     <div id='calendar'></div> 
