--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -3,7 +3,7 @@
 {% block title %}Admin Dashboard{% endblock %}
 
 {% block content %}
-<h1 class="mb-3">GREENVILLE CHECK-INS DASHBOARD</h1>
+<div class="card-header"><h1 align="center">GREENVILLE CHECK-INS DASHBOARD</h1></div>
 <style>
     body {
         /* Apply a light gray background to the whole page content area */
