style: Minor tweaking

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -11,13 +11,14 @@
     }
     .card-header {
         /* Apply WSP Red to card headers */
-        background-color: #CE0037; /* Approximate WSP Red */
+        background-color: #f8423a; /* Approximate WSP Red */
         color: white; /* Make text white for contrast */
     }
     .dashboard_title {
         background-color: #000; /* Approximate WSP Red */
         color: white; /* Make text white for contrast */
         margin-bottom: 25px;
+        padding: 5px;
     }
     
     .card-header h3, .card-header h5 {
