style: Minor tweaking

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -19,6 +19,7 @@
         color: white; /* Make text white for contrast */
         margin-bottom: 25px;
         padding: 5px;
+        border-radius: 10px;
     }
     
     .card-header h3, .card-header h5 {
@@ -32,8 +33,8 @@
         margin-bottom: 1.5rem; /* Add some space below calendar header */
     }
     #calendar .fc-button-primary {
-        background-color: #CE0037; /* Make calendar buttons red */
-        border-color: #CE0037;
+        background-color: #f8423a; /* Make calendar buttons red */
+        border-color: #f8423a;
     }
     #calendar .fc-button-primary:hover {
         background-color: #a8002d; /* Darker red on hover */
