style: Minor tweaking

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -28,6 +28,11 @@
         margin-bottom: 0; /* Remove default margin if needed */
     }
 
+    a {
+        color:#f8423a;
+        text-decoration: none;
+    }
+
     /* Optional: Style the calendar header buttons */
     #calendar .fc-header-toolbar {
         margin-bottom: 1.5rem; /* Add some space below calendar header */
