style: Minor tweaking

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -53,6 +53,22 @@
         background-color: #5a6268;
         border-color: #5a6268;
     }
+    .fc-theme-standard td, .fc-theme-standard th {
+        border:none;
+    }
+    .fc-direction-ltr {
+        text-align: center;
+    }
+    .fc-col-header-cell-cushion {
+        margin-bottom: 25px;
+        margin-top: 10px
+    }
+    .list-unstyled {
+        list-style-type: disc;
+        padding-left:50px;
+    }
+
+
 </style>
 {# --- END CUSTOM STYLES --- #}   
     {# --- Main Row: Calendar and Side Panel Placeholder --- #}
