style: Minor tweaking

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -59,10 +59,10 @@
     .fc-direction-ltr {
         text-align: center;
     }
-    .fc-col-header-cell-cushion {
+    /*.fc-col-header-cell-cushion {
         margin-bottom: 25px;
         margin-top: 10px
-    }
+    }*/
     .list-unstyled {
         list-style-type: disc;
         padding-left:50px;
