style: Minor tweaking

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -53,9 +53,9 @@
         background-color: #5a6268;
         border-color: #5a6268;
     }
-    .fc-theme-standard td, .fc-theme-standard th {
+    /*.fc-theme-standard td, .fc-theme-standard th {
         border:none;
-    }
+    }*/
     .fc-direction-ltr {
         text-align: center;
     }
