Updated icon color

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,6 +3,18 @@
 {% block title %}Home - Greenville Check-in{% endblock %}
 
 {% block content %}
+<style>
+.btn-primary {
+    background-color: #f8423a;
+    border-color: #f8423a;
+}
+
+.btn-primary:hover {
+    background-color: #a8002d;
+}
+
+</style>
+
 <div class="px-4 py-5 my-5 text-center">
     <h1 class="display-5 fw-bold">Greenville Check-in</h1>
     <div class="col-lg-6 mx-auto">
