Updated icon color

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -24,8 +24,10 @@
                 <a href="/scan?site={{ code }}" class="btn btn-primary btn-lg px-4 gap-3" background="#f8423a" border-color="#f8423a">Scan ({{ name }})</a>
             {% endfor %}
         </div>
-         <hr class="my-4">
-         <p><a href="/admin">Admin Area</a></p>
+        <hr class="my-4">
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <a href="/admin" class="btn btn-primary btn-lg px-4 gap-3" background="#f8423a" border-color="#f8423a">Admin Area</a>
+        </div>
     </div>
 </div>
 {% endblock %}
