Updated icon color

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Home - Greenville Check-in{% endblock %}
+{% block title %}Home - WSP Check-in Tracker{% endblock %}
 
 {% block content %}
 <style>
@@ -16,7 +16,7 @@
 </style>
 
 <div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold">Greenville Check-in</h1>
+    <h1 class="display-5 fw-bold">WSP Check-in Tracker</h1>
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Select a site to begin your check-in process.</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
