--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -353,7 +353,7 @@
         <div class="mb-3">
             <label class="form-label">Site</label>
             <select name="site" class="form-select">
-                <option value="greensboro">Greensboro</option>
+                <option value="greenville">Greenville</option>
                 <option value="remote">Remote</option>
             </select>
         </div>
@@ -378,45 +378,45 @@
 </div>
 
 <div class="modal fade" id="editRecordModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog">
-    <form action="/admin/edit" method="post">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Edit Record</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <input type="hidden" name="record_id" id="edit_record_id">
-        
-        <div class="mb-3">
-            <label class="form-label">Name</label>
-            <input type="text" name="user_name" id="edit_user_name" class="form-control" required>
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Site</label>
-            <select name="site" id="edit_site" class="form-select">
-                <option value="greensboro">Greensboro</option>
-                <option value="remote">Remote</option>
-            </select>
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Reason</label>
-            <select name="visit_reason" id="edit_visit_reason" class="form-select">
-                <option value="Work">Work</option>
-                <option value="Visit">Visit</option>
-                <option value="Client Meeting">Client Meeting</option>
-                <option value="Internal Meeting">Internal Meeting</option>
-                <option value="Other">Other</option>
-            </select>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="submit" class="btn btn-primary">Save Changes</button>
-      </div>
-    </div>
-    </form>
-  </div>
+    <div class="modal-dialog">
+        <form action="/admin/edit" method="post"> <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Edit Record</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" name="record_id" id="edit_record_id">
+                
+                <div class="mb-3">
+                    <label class="form-label">Name</label>
+                    <input type="text" name="user_name" id="edit_user_name" class="form-control" required>
+                </div>
+                
+                <div class="mb-3">
+                    <label class="form-label">Site</label>
+                    <select name="site" id="edit_site" class="form-select">
+                        <option value="greensboro">Greensboro</option>
+                        <option value="greenville">Greenville</option> <option value="remote">Remote</option>
+                    </select>
+                </div>
+                
+                <div class="mb-3">
+                    <label class="form-label">Reason</label>
+                    <select name="visit_reason" id="edit_visit_reason" class="form-select">
+                        <option value="Work">Work</option>
+                        <option value="Visit">Visit</option>
+                        <option value="Client Meeting">Client Meeting</option>
+                        <option value="Internal Meeting">Internal Meeting</option>
+                        <option value="Other">Other</option>
+                    </select>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
+            </div>
+        </form>
+    </div>    
 </div>
 
 {% endblock %}
