feat: Remove public admin link and login button from navbar

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -30,8 +30,7 @@
                 Visitor Check-in
             </a>
         </div>
-         <hr class="my-4">
-         <p><a href="/admin" class="btn btn-sm btn-danger">Admin Area</a></p>
+         {# --- REMOVED ADMIN LINK --- #}
     </div>
 </div>
 {% endblock %}
